changing footnotes to be visible by default because some users had issues with the links

--- a/src/styles.css
+++ b/src/styles.css
@@ -31,7 +31,7 @@ figcaption {
   padding: 10px;
 }
 
-#ei, #hi, #ct, #footnotes {
+#ei, #hi, #ct {
   display: none;
 }
 
@@ -155,3 +155,4 @@ p {
 h2 {
   text-decoration: none;
 }
+
